# RemoveTheSpike

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
include/AlarmDescriptor/: AlarmDescriptor.hpp
include/CommandLineParser/: CommandLineParser.hpp
include/ConfigProcessor/: ConfigProcessor.hpp
include/Deprecated/: DataSaver.h  DeskryptorFragmentu.h  Kalman.h  TypAlarmu.h  UsuwaczZaklocen.h  analizatorAlarmow.h  resource.h
include/DisturbanceElimination/: DisturbanceElimination.hpp
include/FileHandler/: FileHandler.hpp
include/LevinsonDurbin/: LevinsonDurbin.hpp
include/ModelStability/: ModelStability.hpp
include/Signal/: Signal.hpp
include/SignalParameters/: SignalParameters.hpp
include/VariadicKalmanFilter/: VariadicKalmanFilter.hpp
include/utils/: Counter.hpp  ObjectGuard.hpp
lib/: CMakeLists.txt
lib/CommandLineParser/: CMakeLists.txt  CommandLineParser.cpp
lib/ConfigProcessor/: CMakeLists.txt  ConfigProcessor.cpp
lib/Deprecated/: DataSaver.cpp  DeskryptorFragmentu.cpp  Interpolator.cpp  Kalman.cpp  Skladacz.cpp  Source.cpp  TypAlarmu.cpp  UsuwaczZaklocen.cpp  analizatorAlarmow.cpp
lib/DisturbanceElimination/: CMakeLists.txt  DisturbanceElimination.cpp
lib/FileHandler/: CMakeLists.txt  FileHandler.cpp
lib/LevinsonDurbin/: CMakeLists.txt  LevinsonDurbin.cpp
lib/ModelStability/: CMakeLists.txt  ModelStability.cpp
lib/Signal/: CMakeLists.txt  Signal.cpp
lib/SignalParameters/: CMakeLists.txt  SignalParameters.cpp
lib/VariadicKalmanFilter/: CMakeLists.txt  VariadicKalmanFilter.cpp
removeTheSpike/: CMakeLists.txt
removeTheSpike/include/: AlarmDescriptor.hpp  ConfigProcessor.hpp  DisturbanceElimination.hpp  FileHandler.hpp  Interpolator.h  LevinsonDurbin.hpp  ModelStability.hpp  Normalizator.h  SignalParameters.hpp  Skladacz.h  VariadicKalmanFilter.hpp
removeTheSpike/include/utils/: BufferMoment.hpp  Counter.hpp  ShiftBuffer.hpp  SwapBuffer.hpp
removeTheSpike/src/: ConfigProcessor.cpp  DisturbanceElimination.cpp  FileHandler.cpp  LevinsonDurbin.cpp  ModelStability.cpp  Normalizator.cpp  SignalParameters.cpp  VariadicKalmanFilter.cpp
src/: CMakeLists.txt  Configuration.cfg  main.cpp
test/: CMakeLists.txt  TestConfig.cfg  armadillo_test  boost_po  boost_po.cpp  main.cpp  submatrix_test
test/ArmadilloTest/: armadillo_test  armadillo_test.cpp  memptr  memptr.cpp  submatrix_test.cpp
test/ConfigProcessorTest/: ConfigProcessorTest.cpp
